--- a/public/index.html
+++ b/public/index.html
@@ -37,4 +37,17 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAISM-8pOrWliQ8rpSS0SHC5kHwxk7NZ0w",
+      authDomain: "chit-chat-42aa1.firebaseapp.com",
+      databaseURL: "https://chit-chat-42aa1.firebaseio.com",
+      projectId: "chit-chat-42aa1",
+      storageBucket: "chit-chat-42aa1.appspot.com",
+      messagingSenderId: "251175505954"
+    };
+    firebase.initializeApp(config);
+  </script>
 </html>
